--- a/journalApp/src/main/resources/application.properties
+++ b/journalApp/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri = mongodb+srv://Sandeep:Sandeep@cluster0.tdaxvcx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
-#spring.data.mongodb.username=myjournaluser
-#spring.data.mongodb.password=mypassword
